manifests/rbac.yaml
# See https://jeremievallee.com/2018/05/28/kubernetes-rbac-namespace-user.html
---
apiVersion: v1
kind: Namespace
metadata:
  name: stephen
---

# kubectl -n stephen describe sa stephen
# kubectl -n stephen get secret stephen-token-8mnfn -o "jsonpath={.data.token}" | base64 -d
# kubectl -n stephen get secret stephen-token-8mnfn -o "jsonpath={.data['ca\.crt']}"
