manifests/hypriot.yaml
apiVersion: v1
kind: Service
metadata:
  name: hypriot
  labels:
    app: hypriot
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: hypriot
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hypriot
  labels:
    app: hypriot
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hypriot
        blinktShow: "true"
        blinktColor: "ffff00"
    spec:
      containers:
      - name: hypriot
        image: hypriot/rpi-busybox-httpd
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hypriot
  labels:
    app: hypriot
spec:
  rules:
    - host: welcome.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: hypriot
              servicePort: 80
