manifests/kuard.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kuard
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kuard
  #annotations:
  #  kubernetes.io/change-cause: "Update revisionHistoryLimit"
spec:
  replicas: 1
  # minReadySeconds: 60
  # revisionHistoryLimit: 14
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-arm:1
        imagePullPolicy: Always
        command:
          - "/kuard"
          - "$(EXTRA_PARAM)"
        resources:
          requests:
            cpu: "500m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        volumeMounts:
          - mountPath: "/data"
            name: "kuard-data"
          - name: config-volume
            mountPath: /config
          - name: tls-certs
            mountPath: "/tls"
            readOnly: true
      restartPolicy: Always
      volumes:
        - name: "kuard-data"
          persistentVolumeClaim:
            claimName: kuard-claim
        - name: config-volume
          configMap:
            name: kuard-config
        - name: tls-certs
          secret:
            secretName: kuard-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: http
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: kuard.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: kuard
              servicePort: 8080
