manifests/markdownrender.yaml
apiVersion: v1
kind: Service
metadata:
  name: markdownrender
  labels:
    app: markdownrender
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: markdownrender
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: markdownrender
  labels:
    app: markdownrender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markdownrender
  template:
    metadata:
      labels:
        app: markdownrender
    spec:
      containers:
      - name: markdownrender
        image: functions/markdownrender:latest-armhf
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: markdownrender
spec:
  rules:
  - host: markdown.cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: markdownrender
          servicePort: 8080
