manifests/whoami.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
        blinktShow: "true"
        blinktColor: "00ff00"
    spec:
      containers:
      - name: whoami
        image: kingdevnl/whoami:arm
        ports:
          - containerPort: 80
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: whoami
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  rules:
  - host: whoami.cluster.local
    http:
      paths:
        - path: /
          backend:
            serviceName: whoami
            servicePort: 80
